# meta_pedidodia

./: Dockerfile  README.md  Relatório Cliente 24953_24750.xlsx  app.py  appTeste.py  doc.env  pyproject.toml  requirements.txt  teste.py  teste_CxOracle.py  teste_conexao.py
.devcontainer/: Dockerfile  devcontainer.json
app/: app.py
